changes for 21.17.1.2.0